--- a/components/FeelingCheckCard/FeelingCheckCard.module.css
+++ b/components/FeelingCheckCard/FeelingCheckCard.module.css
@@ -1,7 +1,7 @@
 .card {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 8px;
     border: 0px solid var(--opacity-neutral-darkest-15);
     border-radius: 32px;
@@ -21,9 +21,9 @@
 
 .recommendationLabel {
     font-family: var(--font-lato);
-    font-weight: 700;
+    font-weight: 600;
     font-size: 14px;
-    line-height: 150%;
+    line-height: 160%;
     color: var(--color-neutral-darkest);
     align-self: flex-start;
 }
@@ -32,7 +32,7 @@
     font-family: var(--font-lato);
     font-weight: 400;
     font-size: 14px;
-    line-height: 150%;
+    line-height: 160%;
     color: var(--color-neutral-darkest);
     align-self: flex-start;
 }
